# telegram_pr_bot

./: .env.example  Makefile  alembic.ini  pyproject.toml
bot/: __main__.py
bot/commands/: __init__.py  bot_commands.py  callback_data_states.py  help.py  settings.py  start.py
bot/db/: base.py  channel.py  engine.py  post.py  post_channel.py  url.py  user.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 4b67c3942534_initial.py  4f3219b61c8b_initial.py
bot/db/types/: url.py
bot/handlers/: __init__.py  create_post.py  get_post.py  help.py  start.py  web_app_data.py
bot/middlewares/: register_check.py
bot/structures/: __init__.py  fsm_groups.py
bot/structures/callback_data_factories/: __init__.py  post_data.py
bot/structures/keyboards/: __init__.py  menu_board.py  posts_board.py  prtype_board.py
